plugins {
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'az.axonflow'
version = '0.0.1-SNAPSHOT'

subprojects {

    apply plugin: 'java-library'
    apply plugin: 'io.spring.dependency-management'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    repositories {
        mavenCentral()
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
            mavenBom "org.springframework.modulith:spring-modulith-bom:${springModulithVersion}"
            mavenBom "software.amazon.awssdk:bom:${awsSdkVersion}"
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
            mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
        }
    }

    test {
        useJUnitPlatform()
    }
}
